--- a/src/app/views/seller-account/orders/list/list.html
+++ b/src/app/views/seller-account/orders/list/list.html
@@ -29,11 +29,11 @@
 		</div> -->
 		<div class="search-sort-div hide-search hidden-xs" ng-class="{'show-search': searchOpen}">
 			<i class="fa fa-search" ng-click="searchBar()"></i>
-			<input type="text" placeholder="Search" class="form-control">
+			<input type="text" placeholder="Search" class="form-control" ng-model="mdl.searchText">
 		</div>
 		<div class="search-sort-div hide-search hidden-xs" ng-class="{'show-search': filterOpen}">
 			<i class="fa fa-filter" ng-click="filterBar()"></i>
-			<input date-range-picker class="form-control date-picker" placeholder="Select Dates" type="text" ng-model="date">
+      <input type="daterange" class="form-control date-picker" ng-model="myDateRange" ranges="mdl.ranges" open="left" />
 		</div>
 		<div class="visible-xs">
 			<div class="pull-right mobile-icons">
@@ -41,10 +41,10 @@
 				<i class="fa fa-search orange-color pull-right" ng-click="mobilesearchBar()"></i>
 			</div>
 			<div class="arrow_box" ng-show="mobilesearchOpen">
-				<input class="form-control" type="text" placeholder="Search">
+				<input class="form-control" type="text" placeholder="Search" ng-model="mdl.searchText">
 			</div>
 			<div class="arrow_box filter_arrow_box" ng-show="mobilefilterOpen">
-				<input date-range-picker class="form-control date-picker" placeholder="Select Dates" type="text" ng-model="date" />
+        <input type="daterange" class="form-control date-picker" ng-model="myDateRange" ranges="mdl.ranges" open="left" />
 			</div>
 		</div>
 		<!-- <i class="fa fa-filter date-filter-icon" ng-click="filterBar()"></i>
@@ -65,7 +65,8 @@
 	<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 no-padding">
 		<table class="table order-table hidden-xs">
 			<tbody>
-				<tr ng-repeat="order in mdl.orders">
+				<tr ng-repeat="order in mdl.orders| filter:{ id : mdl.searchText}| dateRangeFilter:  myDateRange.startDate: myDateRange.endDate
+">
 					<td>
 						<p class="heading-text no-margin">
 							<i class="icon soap-icon-card yellow-color circle"></i>&nbsp Order
@@ -73,7 +74,7 @@
 						<small>ID : <span class="bold-font">{{order.id}}</span></small>
 					</td>
 					<td class="heading-text">
-						Jan 28, 2015
+            {{order.date_created_at | date:"MMM dd,yyyy"}}
 					</td>
 					<td class="heading-text">{{order.items.length}} items
 					</td>
