bug fixes and breadcrumb common

--- a/src/app/views/main/main.html
+++ b/src/app/views/main/main.html
@@ -339,6 +339,12 @@
 						</ul>
 				</div>
 		</div> -->
+
+  <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 breadcrumb-col">
+    <a ui-sref="home">Home /</a>
+    <a  ng-repeat="bc in mainMdl.breadcrumbs">
+    {{bc.title}}<span ng-show="!$last"> /</span></a>
+  </div>
 		<section id="content" class="gray-area">
 			<div class="container">
 				<div ng-show="rmodel.message.show" class="alert alert-{{rmodel.message.type}} success-msg">
