--- a/src/app/style/sass/style.scss
+++ b/src/app/style/sass/style.scss
@@ -7321,3 +7321,53 @@ section {
     color: $white-theme-color !important;
   }
 }
+
+// inquries page
+
+.inquiry-form {
+  padding: 15px 0;
+  .image-div {
+    img {
+      float: left;
+      width: 13%;
+      min-width: 110px;
+    }
+  }
+  .content-div {
+    padding-left: 14%;
+    h4 {
+      margin-bottom: 5px; 
+      font-weight: 600;
+    }
+    a {
+      color: #009ddc; 
+      font-size: 15px;  
+      font-weight: 400;
+    }
+    .form-control {
+      width: 50%; 
+      display: inline-block; 
+      margin-bottom: 5px;
+    }
+    p {
+      i {
+        font-size: 15px;
+        margin-right: 2px;
+      }
+    }
+    .location-p {
+      margin-bottom: 5px; 
+      font-size: 14px;
+      i {
+        margin-right: 5px;
+        font-size: 18px;
+      }
+    }
+  }
+  .message-area {
+    textarea {
+      height: 250px; 
+      margin-bottom: 15px;
+    }
+  }
+}
