--- a/src/app/views/account/inquiries/list/list.html
+++ b/src/app/views/account/inquiries/list/list.html
@@ -3,7 +3,7 @@
     <p>Excavating Awesomeness</p>
 </div>
 <!-- <div class="booking-information travelo-box" style="margin-bottom: 0px; padding: 20px 30px 1px;"> -->
-<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 seller-header search-col no-padding">
+<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 seller-header search-col" style="padding:10px 0 0;">
 	<h1 class="no-margin black-color seller-heading-font">Inquiries</h1>
 	<div class="search-sort-div hide-search hidden-xs" ng-class="{'show-search': searchOpen}">
 		<i class="fa fa-search" ng-click="searchBar()"></i>
