--- a/src/app/views/account/inquiries/new/new.html
+++ b/src/app/views/account/inquiries/new/new.html
@@ -68,14 +68,14 @@
                 {{mdl.equi.location.city.name}}, {{mdl.equi.location.state.name}}, {{mdl.equi.location.country.name}}
             </p>
             <!-- <p>Zip Code: <span class="bold-font">{{mdl.equi.location.zip_code}}</span></p> -->
-            <p class="font14">
+            <p>
                 <i class="fa fa-clock-o orange-color"></i> 
-                Local Time: 04: 27 PM March 12, 2016
+                <span class="bold-font">Local Time:</span> 04: 27 PM March 12, 2016
             </p>
         </div>
     </div>
     <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 no-padding message-area">
-        <textarea class="form-control" ng-model="mdl.text"></textarea>
+        <textarea class="form-control" ng-model="mdl.text" placeholder="Your message..."></textarea>
     </div>
     <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 no-padding text-right">
         <button class="btn all-btn primary-btn">Send</button>
