--- a/src/app/views/main/main.html
+++ b/src/app/views/main/main.html
@@ -341,9 +341,9 @@
 		</div> -->
 
   <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 breadcrumb-col">
-    <a ui-sref="home">Home /</a>
+    <a ui-sref="home">Home </a>
     <a  ng-repeat="bc in mainMdl.breadcrumbs">
-    {{bc.title}}<span ng-show="!$last"> /</span></a>
+      <span ui-sref="{{bc.state}}"> / {{bc.title}}</span></a>
   </div>
 		<section id="content" class="gray-area">
 			<div class="container">
