--- a/src/app/views/account/inquiries/view/view.html
+++ b/src/app/views/account/inquiries/view/view.html
@@ -19,7 +19,7 @@
                 </div>
             </div>
         </div> -->
-        <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 inquiry-form no-bpadding">
+        <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 inquiry-form inquiry-form-xs no-bpadding">
             <div class="image-div">
                 <img ng-src="{{(mdl.inq.images[0].url) || 'http://dummyimage.com/270x160/cccccc/ffffff&text=No+Image+Found'}}">
             </div>
