--- a/src/app/views/order-confirmation/order-confirmation.html
+++ b/src/app/views/order-confirmation/order-confirmation.html
@@ -1,3 +1,27 @@
+<div class="loaderDiv" loader>
+  <img src="assets/images/loader.gif"/>
+  <p>Excavating Awesomeness</p>
+</div>
+<div class="col-lg-9 col-md-9 col-sm-8 col-xs-12 no-padding">
+  <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 progress-bar-col">
+    <ul class="progress-indicator">
+      <li class="completed">
+        <span class="bubble"></span>
+        <span class="active-bubble"></span>
+        <p><a ui-sref="main.checkoutAddress">1. Delivery</a></p>
+      </li>
+      <li class="completed">
+        <span class="bubble"></span>
+        <span class="active-bubble"></span>
+        <p><a ui-sref="main.payment">2. Payment</a></p>
+      </li>
+      <li class="active">
+        <span class="bubble"></span>
+        <span class="active-bubble"></span>
+        <p>3. Complete</p>
+      </li>
+    </ul>
+  </div>
 <div class="booking-information travelo-box">
     <h2>Order Confirmation</h2>
     <hr />
